TelephonyProvider: Display APN PPP number
Add a new column "ppp_number" to the carriers database for
displaying the APN PPP number

Change-Id: I3b7c9d7d4d8fbfc5eb808c45701245d82c75b84d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,4 +31,6 @@
     <!-- Apn read only -->
     <string name="read_only">read_only</string>
 
+    <!-- Apn PPP number -->
+    <string name="ppp_number">ppp_number</string>
 </resources>
