APN: Add the read only APN feature.
Add a read only field to the APN database for the read only
APN feature.

Some operators don't want their APNs to be edited by end user to
avoid mistaken changes. End user should be able to only view the
APNs, but not edit.

Change-Id: I75524ecccae33565dcee77832eb7252eab794bc2
CRs-Fixed: 774852

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,4 +28,7 @@
          storage for SMS and MMS messages. [CHAR LIMIT=40] -->
     <string name="app_label" product="default">Phone and Messaging Storage</string>
 
+    <!-- Apn read only -->
+    <string name="read_only">read_only</string>
+
 </resources>
